done first content with template and model data outputs

--- a/App_Data/umbraco.config
+++ b/App_Data/umbraco.config
@@ -1,13 +1,15 @@
-<?xml version="1.0" encoding="utf-16"?>
-<!DOCTYPE root [<!ELEMENT HomePage ANY>
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE root [ 
+<!ELEMENT HomePage ANY>
 <!ATTLIST HomePage id ID #REQUIRED>
- 
 
 ]>
 <root id="-1">
-  <HomePage id="1049" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2018-06-26T19:32:38" updateDate="2018-06-26T19:32:54" nodeName="Welcome" urlName="welcome" path="-1,1049" isDoc="" nodeType="1048" creatorName="Bradley Hayes" writerName="Bradley Hayes" writerID="0" template="1047" nodeTypeAlias="HomePage">
-    <bodyText><![CDATA[<p>Hello and welcome to the first piece of content created with the <strong>new </strong> template!</p>
+  <HomePage id="1049" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2018-06-26T19:32:38" updateDate="2018-06-26T20:56:10" nodeName="Welcome" urlName="welcome" path="-1,1049" isDoc="" nodeType="1048" creatorName="Bradley Hayes" writerName="Bradley Hayes" writerID="0" template="1047" nodeTypeAlias="HomePage">
+    <promoSubtitle><![CDATA[<p>Hello and welcome to the first piece of content created with the <strong>new </strong> template!</p>
+<p> </p>
 <p>What I've learned so far:</p>
+<p> </p>
 <ul>
 <li>Document Types
 <ul>
@@ -32,7 +34,22 @@
 <li>Your reading it now. :P</li>
 </ul>
 </li>
-</ul>]]></bodyText>
-    <mainHeading><![CDATA[Welcome tot eh first page created]]></mainHeading>
+<li>CSS and Script files.
+<ul>
+<li>Copying files into the css and js folders etc in the project root will make them appear in umbraco settings.
+<ul>
+<li>But only when done via visual studio.
+<ul>
+<li>Tried just copying the files in explorer and they wouldnt show up..</li>
+<li>But in the tutorials for the current umbraco version just copying files across worked completely fine.</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>]]></promoSubtitle>
+    <promoTitle><![CDATA[Welcome to  the first content created]]></promoTitle>
+    <promoButtonText><![CDATA[Click me now!]]></promoButtonText>
   </HomePage>
 </root>
