added textpage template and doctype

--- a/App_Data/umbraco.config
+++ b/App_Data/umbraco.config
@@ -1,5 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE root [ 
+<?xml version="1.0" encoding="utf-16"?>
+<!DOCTYPE root [<!ELEMENT TextPage ANY>
+<!ATTLIST TextPage id ID #REQUIRED>
+ 
 <!ELEMENT HomePage ANY>
 <!ATTLIST HomePage id ID #REQUIRED>
 
@@ -51,5 +53,12 @@
 </ul>]]></promoSubtitle>
     <promoTitle><![CDATA[Welcome to  the first content created]]></promoTitle>
     <promoButtonText><![CDATA[Click me now!]]></promoButtonText>
+    <TextPage id="1055" parentID="1049" level="2" creatorID="0" sortOrder="0" createDate="2018-06-26T21:56:41" updateDate="2018-06-26T21:56:41" nodeName="About Us" urlName="about-us" path="-1,1049,1055" isDoc="" nodeType="1054" creatorName="Bradley Hayes" writerName="Bradley Hayes" writerID="0" template="1053" nodeTypeAlias="TextPage">
+      <title><![CDATA[There is no spoon!]]></title>
+      <bodyText><![CDATA[<p>Actually just a single devloper there is no <strong>us </strong> lol.</p>
+<p>Just playing with Umbraco testing the differences with versions and tracking database / file changes to see how the CMS is working.</p>
+<p>Currently using v7.2.8 witch has quite a lot of variance from the more current versions used in the tutorials and the documentation available.</p>]]></bodyText>
+      <quote><![CDATA[Doing, is the best way to learn.]]></quote>
+    </TextPage>
   </HomePage>
 </root>
