--- a/Web.config
+++ b/Web.config
@@ -55,7 +55,8 @@
   </appSettings>
   <connectionStrings>
     <remove name="umbracoDbDSN" />
-    <add name="umbracoDbDSN" connectionString="Server=(localdb)\MSSQLLocalDB;Database=umbraco-cms-scratch;Integrated Security=true" providerName="System.Data.SqlClient" />
+    <!-- <add name="umbracoDbDSN" connectionString="Server=(localdb)\MSSQLLocalDB;Database=umbraco-cms-scratch;Integrated Security=true" providerName="System.Data.SqlClient" /> -->
+    <add name="umbracoDbDSN" connectionString="Server=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\TPCMS\Tests\umbraco-scratch\App_Data\umbraco-scratch.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!-- Important: If you're upgrading Umbraco, do not clear the connection string / provider name during your web.config merge. -->
   </connectionStrings>
   
