--- a/Web.config
+++ b/Web.config
@@ -36,6 +36,8 @@
       http://our.umbraco.org/documentation/using-umbraco/config-files/#webconfig
       -->
     <add key="umbracoConfigurationStatus" value="7.2.8" />
+    <!-- <add key="umbracoConfigurationStatus" value="7.2.8" /> -->
+
     <add key="umbracoReservedUrls" value="~/config/splashes/booting.aspx,~/install/default.aspx,~/config/splashes/noNodes.aspx,~/VSEnterpriseHelper.axd" />
     <add key="umbracoReservedPaths" value="~/umbraco,~/install/" />
     <add key="umbracoPath" value="~/umbraco" />
@@ -54,9 +56,16 @@
 
   </appSettings>
   <connectionStrings>
+
+
     <remove name="umbracoDbDSN" />
-    <!-- <add name="umbracoDbDSN" connectionString="Server=(localdb)\MSSQLLocalDB;Database=umbraco-cms-scratch;Integrated Security=true" providerName="System.Data.SqlClient" /> -->
     <add name="umbracoDbDSN" connectionString="Server=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\TPCMS\Tests\umbraco-scratch\App_Data\umbraco-scratch.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    
+
+
+    <!-- <remove name="umbracoDbDSN" /> -->
+    <!-- <add name="umbracoDbDSN" connectionString="Server=(localdb)\MSSQLLocalDB;Database=umbraco-cms-scratch;Integrated Security=true" providerName="System.Data.SqlClient" /> -->
+    <!-- <add name="umbracoDbDSN" connectionString="Server=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\TPCMS\Tests\umbraco-scratch\App_Data\umbraco-scratch.mdf;Integrated Security=True" providerName="System.Data.SqlClient" /> -->
     <!-- Important: If you're upgrading Umbraco, do not clear the connection string / provider name during your web.config merge. -->
   </connectionStrings>
   
