--- a/App_Data/umbraco.config
+++ b/App_Data/umbraco.config
@@ -31,17 +31,47 @@
 <p>I was just following the basic tutorial but I often deviated from the path because I wanted to know what Umbraco was doing with files and databases.</p>
 <p>As such, I discovered a couple of things on the way that might be helpful to others.</p>]]></blogAboutText>
       <blogImage>1061</blogImage>
-      <blogItem id="1071" parentID="1070" level="3" creatorID="0" sortOrder="0" createDate="2018-06-27T15:10:46" updateDate="2018-06-27T15:10:46" nodeName="Umbraco Basics" urlName="umbraco-basics" path="-1,1052,1070,1071" isDoc="" nodeType="1059" creatorName="scratch" writerName="scratch" writerID="0" template="1058" nodeTypeAlias="blogItem">
+      <blogItem id="1071" parentID="1070" level="3" creatorID="0" sortOrder="0" createDate="2018-06-27T15:10:46" updateDate="2018-06-27T18:45:06" nodeName="Umbraco Basics" urlName="umbraco-basics" path="-1,1052,1070,1071" isDoc="" nodeType="1059" creatorName="scratch" writerName="scratch" writerID="0" template="1058" nodeTypeAlias="blogItem">
         <blogItemImage>1062</blogItemImage>
         <blogItemTeaser><![CDATA[Just some of the basics of Umbraco]]></blogItemTeaser>
-        <blogItemBody><![CDATA[<p>Put the basic note u made earlier in here</p>
-<p>Put the basic note u made earlier in here</p>
-<p>Put the basic note u made earlier in here</p>
-<p>Put the basic note u made earlier in here</p>
-<p>Put the basic note u made earlier in here</p>
-<p>Put the basic note u made earlier in here</p>
-<p>Put the basic note u made earlier in here</p>
-<p>Put the basic note u made earlier in here</p>]]></blogItemBody>
+        <blogItemBody><![CDATA[<p>Hello and welcome to the first piece of content created with the new template!</p>
+<p> What I've learned so far:</p>
+<ul>
+<li> Document Types
+<ul>
+<li>Essentially they are data structures (I'm guessing represented by generate class object maybe???) with properties.</li>
+<li>Properties are data types that represent fields for content creators to fill out.
+<ul>
+<li>These fields are represented by modules such as rich text editors, image sources etc as form elements for content creators to fill out in the back end.</li>
+<li>They determine the structure of content to be output with an associated template</li>
+</ul>
+</li>
+<li>Note: Tabs in document types are not tabs in html they're just for organizing the data entry UI into organised tabs to make it easier for content creators.</li>
+</ul>
+</li>
+<li>Templates
+<ul>
+<li>cshtml files that make use of the Document type data structure filled out by content creators.</li>
+<li>HTML and razor c# injections. ( can be used with web forms to but that isn't covered in the umbraco documentation since it's depreciated.)</li>
+</ul>
+</li>
+<li>Content
+<ul>
+<li>Your reading it now. :P</li>
+</ul>
+</li>
+<li>CSS and Script files.
+<ul>
+<li>Copying files into the css and js folders etc in the project root will make them appear in umbraco settings.
+<ul>
+<li>But only when done via visual studio. (in this version) Files wernt shoing up if just copied in explorer.</li>
+<li>But in the tutorials for the current umbraco version just copying files across worked completely fine.</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<p> </p>]]></blogItemBody>
       </blogItem>
       <blogItem id="1073" parentID="1070" level="3" creatorID="0" sortOrder="1" createDate="2018-06-27T15:21:05" updateDate="2018-06-27T15:21:05" nodeName="Database Configurations" urlName="database-configurations" path="-1,1052,1070,1073" isDoc="" nodeType="1059" creatorName="scratch" writerName="scratch" writerID="0" template="1058" nodeTypeAlias="blogItem">
         <blogItemImage>1072</blogItemImage>
