--- a/Web.config
+++ b/Web.config
@@ -49,7 +49,7 @@
   </appSettings>
   <connectionStrings>
     <remove name="umbracoDbDSN"/>
-    <add name="umbracoDbDSN" connectionString="Server=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\TPCMS\Tests\umbraco-scratch\App_Data\umbraco-scratch.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="umbracoDbDSN" connectionString="Server=(LocalDB)\MSSQLLocalDB;AttachDbFilename=X:\_Projects\umbraco-scratch\App_Data\umbraco-scratch.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
     <!-- <remove name="umbracoDbDSN" /> -->
     <!-- <add name="umbracoDbDSN" connectionString="Server=(localdb)\MSSQLLocalDB;Database=umbraco-cms-scratch;Integrated Security=true" providerName="System.Data.SqlClient" /> -->
     <!-- <add name="umbracoDbDSN" connectionString="Server=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\TPCMS\Tests\umbraco-scratch\App_Data\umbraco-scratch.mdf;Integrated Security=True" providerName="System.Data.SqlClient" /> -->
